<resources>
    <string name="app_name">Vital</string>
    <string name="default_web_client_id">
        979112409577-5qicmj1gtd09e2ffph7n567u0tiao2i6.apps.googleusercontent.com
    </string>
    <string name="fitness">Fitness</string>
    <string name="home">Home</string>
    <string name="meals">Meals</string>
    <string name="profile">Profile</string>
    <string name="workout_title">Workout Title</string>
    <string name="lillius">LILLIUS</string>
    <string name="what_s_new">What\'s new</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="language_english">English</string>
    <string name="language_afrikaans">Afrikaans</string>
    <string name="language_zulu">Zulu</string>
    <string name="steps">Steps</string>
    <string name="steps_connect">Steps: connect Google Fit</string>
    <string name="steps_unavailable">Steps: unavailable</string>
    <string name="steps_format">Steps: %1$d</string>
    <string name="calories_burned">Calories burned</string>
    <string name="calories_burned_connect">Calories burned: connect Google Fit</string>
    <string name="calories_burned_unavailable">Calories burned: unavailable</string>
    <string name="calories_burned_format">Calories burned: %1$d kcal</string>
    <string name="distance">Distance</string>
    <string name="distance_connect">Distance: connect Google Fit</string>
    <string name="distance_unavailable">Distance: unavailable</string>
    <string name="distance_format">Distance: %1$.2f km</string>
    <string name="active_minutes">Active minutes</string>
    <string name="active_minutes_connect">Active minutes: connect Google Fit</string>
    <string name="active_minutes_unavailable">Active minutes: unavailable</string>
    <string name="active_minutes_format">Active minutes: %1$d</string>
    <string name="burned">Burned</string>
    <string name="burned_connect">Burned: connect Google Fit</string>
    <string name="burned_unavailable">Burned: unavailable</string>
    <string name="burned_format">Burned: %1$d kcal</string>
    <string name="totals">Totals</string>
    <string name="totals_format">Totals: %1$d kcal | C:%2$.0fg P:%3$.0fg F:%4$.0fg</string>
    <string name="net">Net</string>
    <string name="net_format">Net: %1$d kcal</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="google_fit_connected">Google Fit connected</string>
    <string name="google_fit_not_connected">Google Fit not connected</string>
    <string name="manage_google_fit_permissions">Manage Google Fit Permissions</string>
    <string name="connect_google_fit">Connect Google Fit</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="meal">Meal</string>
</resources>
